2006-05-17  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/urlhandler.cpp:
	Fixed handling of call forwarding/transfer in case of incoming call.

2006-05-17  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Fixed #339880.

2006-05-17  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Fixed #338597 (thanks Brian Pepple).

2006-05-17  Julien Puydt  <jpuydt@free.fr>

	* src/gui/main.cpp: Fixed #336226 (thanks Fabrice Alphonso).

2006-05-17  Damien Sandras  <dsandras@gnome.org>

	* src/gui/addressbook.cpp:
	Applied patch from Julien Puydt to fix #342140.
	
2006-05-17  Julien Puydt  <jpuydt@free.fr>

	* src/gui/addressbook.cpp: Fixed #340902.

2006-05-16  Julien Puydt  <jpuydt@free.fr>

	* src/devices/videoinput.cpp, src/devices/videoinput.h: Fixed #341314.

2006-05-15  Damien Sandras  <dsandras@gnome.org>

	* src/gui/accounts.cpp:
	Compare accounts using SIPURLs.

2006-05-15  Julien Puydt  <jpuydt@free.fr>

	* src/clients/stun.cpp, src/clients/stun.h: Partial fix for #340939.

2006-05-15  Julien Puydt  <jpuydt@free.fr>

	* src/gui/config.cpp: Fixed #341814, thanks Boying Lu.

2006-05-14  Julien Puydt  <jpuydt@free.fr>

	* src/devices/audio.cpp, src/devices/audio.h: Fixed #341309.

2006-05-13  Damien Sandras  <dsandras@gnome.org>

	* endpoints/h323.cpp endpoints/manager.cpp: 
	Ooops. Fixed previous commit.

2006-05-13  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/h323.cpp src/endpoints/manager.cpp:
	Changed default bandwidth to 4 Mbits.

2006-05-13  Julien Puydt  <jpuydt@free.fr>

	* src/gui/callbacks.cpp, src/gui/callbacks.h: Fixed #340858.

2006-05-13  Damien Sandras  <dsandras@gnome.org>
	
	* src/endpoints/sip.cpp src/endpoints/accountshandler.cpp:
	Moved subscription to MWI events in the accounts handler.

2006-05-13  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/ekiga.cpp:
	Do not take the same mutex twice. Fix provided by Michael Riepe 
	<michael mr511 de>. Thanks!

2006-05-13  Julien Puydt  <jpuydt@free.fr>
