@@ -1,3 +1,7 @@
+2006-05-18  Julien Puydt  <jpuydt@free.fr>
+
+	* src/gui/druid.h, src/gui/druid.cpp, src/gui/config.cpp: Fixed #330525.
+
 2006-05-17  Damien Sandras  <dsandras@gnome.org>
 
 	* src/endpoints/urlhandler.cpp:
